tests/e2e/semantics/semi_global_assignment5.error
Error: syntax error in story at line 5, column 5

5|        l[0] = el
          ^^^^^^

E0127: `l[]` is readonly and can not be assigned to.
